# technical-daily-brief

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile.backend  Makefile  NORTH_STAR.md  README.md  RUN.md  auth.ts  config.example.yaml  docker-compose.override.yml  docker-compose.yml  guidance.local.md  middleware.ts  network-allowlist.txt  package-lock.json  package.json  pyproject.toml
.agents/skills/adversarial-review/: SKILL.md
.ai/rules/: README.md
.claude/: launch.json  settings.json
.claude/hooks/: auto-format.sh  session-start-task.sh  statusline-command.sh
.github/workflows/: pages.yml
app/: globals.css  layout.tsx  page.tsx
backend/: README.md  requirements.txt
backend/api/: dependencies.py  main.py
backend/core/: __init__.py  exceptions.py  logging_config.py
backend/lib/: __init__.py
backend/tests/: __init__.py  conftest.py
brief/: gather.py  sources.json  writing-guide.md
briefs/: 2026-07-16.md
docs/: learning-center-setup.md
docs/adr/: 0001-postgres-not-a-document-store.md  0002-git-canonical-db-disposable-mirror.md  0003-nextjs-vercel-neon.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
scrapers/: README.md  __init__.py  base_scraper.py  rss_scraper.py  run_scraper.py
scrapers/sources/: __init__.py  config.yaml
site/: build.py  style.css
story_writer/: README.md  __init__.py  article.py  markov_writer.py  personas.py  run_writer.py  writer.py
story_writer/prompts/: __init__.py  article_prompt.py  system_prompts.py
(+104 files in other folders)
